# SOFTEN18_ESP32_HMI

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/display_driver/: CMakeLists.txt
components/display_driver/include/: display_driver.h  touch_driver.h
components/display_driver/src/: display_driver.c  touch_driver.c
components/example_ui/: CMakeLists.txt
components/example_ui/include/: actions.h  example_ui.hpp  fsm_logic.hpp  fsm_logic_brew_page.hpp  fsm_logic_pay_page.hpp  fsm_logic_selection_page.hpp  images.h  screens.h  ui_events.hpp  ui_logic_brewcontroller.hpp  ui_logic_paycontroller.hpp  ui_main.hpp
components/example_ui/include/eez_export/: actions.h  screens.h
components/example_ui/src/: fsm_logic.cpp  images.c  logic.c  screens.c  ui.c  ui_events_pay_page.cpp  ui_events_prepare_page.cpp  ui_events_selection_page.cpp  ui_logic_pay_page.cpp  ui_logic_prepare_page.cpp  ui_logic_selection_page.cpp  ui_main.cpp
components/example_ui/src/eez_export/: images.c  screens.c  styles.c  ui_image_cappuccino.c  ui_image_meme.c  ui_image_qr_code.c
components/example_ui/test/: CMakeLists.txt
components/example_ui/test/test_dut/: test_dut.c  test_dut.cpp  test_dut_brew_logic.cpp  test_dut_pay_logic.cpp  test_dut_selection_logic.cpp  test_helpers.hpp
main/: CMakeLists.txt  main.cpp
main/config/: board_config.h
main/display_driver/: display_driver.c
main/touch_driver/: touch_driver.c
unity-app/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
unity-app/main/: CMakeLists.txt  test_app_main.c  test_app_main.cpp
